testsuite/tests/parser/should_fail/BranchHints1.hs
module M where

data T = A {-# LIKELY 1 #-} | B